<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="add_new_tv_show">ADD NEW TV SHOW</string>
    <string name="show_list_of_added_tv_shows">SHOW LIST OF ADDED TV SHOWS</string>
    <string name="tv_show">Tv Show</string>
    <string name="release_date">Release Date</string>
    <string name="show_manager">SHOW MANAGER</string>
    <string name="movies">LIST OF ADDED TV SHOWS</string>
    <string name="seasons">Seasons</string>
    <string name="save_tv_show">SAVE TV SHOW</string>
    <string name="field_required">This field is required!</string>
</resources>