<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.combyne.uikit.components.button.ButtonComponent
        android:id="@+id/addNewTvShowButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_tv_show"
        app:layout_constraintBottom_toTopOf="@+id/showTvListButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.combyne.uikit.components.button.ButtonComponent
        android:id="@+id/showTvListButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_list_of_added_tv_shows"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addNewTvShowButton" />

    <com.combyne.uikit.components.toolbar.ToolbarComponent
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_manager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>